--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "course-shop",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://avashchenk0.github.io/course-shop",
   "dependencies": {
     "@headlessui/react": "1.6.4",
     "@heroicons/react": "1.0.6",
@@ -18,6 +19,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -42,6 +45,7 @@
   },
   "devDependencies": {
     "autoprefixer": "10.4.7",
+    "gh-pages": "4.0.0",
     "postcss": "8.4.14",
     "tailwindcss": "3.1.3"
   }
